Generator, Reporting, Documents
Generator changes.  Reporting changes and ehancements.  New document
type can be set by query strin.

--- a/incAccounting/web/templates/ReportBlockEdit.html
+++ b/incAccounting/web/templates/ReportBlockEdit.html
@@ -11,7 +11,7 @@
 	</div></div>
 </div>
 
-<p>{Open Report} {Open Block}</p>
+<p>{Save} {Open Report} {Open Block}</p>
    
 
 <h2>Blocks</h2>
@@ -34,7 +34,7 @@
 	<!-- END Block -->
 </table>
 
-<p>{Add Block} {Save}</p>
+<p>{Add Block}</p>
 
 <script src="~/ace/src/ace.js"></script>
 <script>
