--- a/incAccounting/web/templates/ReportEdit.html
+++ b/incAccounting/web/templates/ReportEdit.html
@@ -9,14 +9,14 @@
 			<pre id="HtmlEditor"></pre>
 	</div></div>
 </div>
-<p>{View} {Save}</p>
+<p>{View} {Save} {Copy}</p>
 
 
 <h2>Filters</h2>
 <!-- BEGIN Filter -->
 <div class="block">
 	<div class="field"><label>Delete:</label><div>{Filter Is Deleted}</div></div>
-	<div class="field blank"><label></label><div>&nbsp;</div></div>
+	<div class="field"><label>Priority:</label><div>{Filter Priority}</div></div>
 	<div class="field"><label>Prompt:</label><div>{Filter Prompt}</div></div>
 	<div class="field"><label>Data:</label><div>{Filter Data Type}</div></div>
 	<div class="field double"><label>SQL:</label><div class="double">
