--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -25,20 +25,20 @@
 				<a href="~/incBootstrap?App=ChangePassword">Change Password</a><br/>	
 
 				<h1>Security</h1>
-				<a href="~/incBootstrap?App=UserList">User List</a><br/>	
-				<a href="~/incBootstrap?App=GroupList">Group List</a><br/>	
-				<a href="~/incBootstrap?App=SecurableList">Securable List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=33abdf4f68f44d73b23fabe400280576">User List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=290198ebc76e43cbb7be15de3e3d0ad7">Group List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=bdcddb7c80a34302a83a23ac1ed5d309">Securable List</a><br/>	
 				<a href="~/incBootstrap?App=ComputerList">Computer List</a><br/>	
 				<a href="~/incBootstrap?App=SettingList">Setting List</a><br/>	
 				<a href="~/incBootstrap?App=LogList">Log List</a><br/>	
 
 				<h1>Reporting</h1>
-				<a href="~/incBootstrap?App=ReportList">Report List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=75ecee50436c4a7d8095b30f794f87f9">Report List</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership Report</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=6d4ea7d4624e48509e915e019ca1f7a9">Chart of Accounts with Balances</a><br/>	
 
 				<h1>Lists</h1>
-				<a href="~/incAccounting?App=AccountList">Account List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Account List</a><br/>	
 				<a href="~/incAccounting?App=ContactTypeList">Contact Type List</a><br/>	
 				<a href="~/incAccounting?App=ContactList">Contacts List</a><br/>	
 				<a href="~/incAccounting?App=DepartmentList">Departments List</a><br/>	
@@ -53,7 +53,15 @@
 
 				<h1>Documents</h1>			
 				<a href="~/incAccounting?App=TransactionList">Transaction List</a><br/>	
-				<a href="~/incAccounting?App=DocumentList">Document List</a><br/>	
+				<a href="~/incAccounting?App=DocumentList">Document List</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=078c5cd40a024563bfde3641352d4e43">Sales Quote List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=97c04a5ce5024ad4b2859908da8f6e1a">Sales Order List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=352f588dfcd147fda29b8b4cdc2fcdfc">Sales Invoice List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=3293e7a3b08744c38975accc635d7573">Sales Credit Memo List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=cefd88dd219a4b6f8bc6dd30fd77f058">Purchase Quote List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=7f8c6d9d299049779046ad7eb70884fa">Purchase Order List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=2fc5847e6eba4c5784ce3258bd5b8f53">Purchase Invoice List</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=30357e5cfb164c29a741e77f3de1cce7">Purchase Credit Memo List</a><br/> 
 				<a href="~/incAccounting?App=PaymentList">Payment List</a><br/>	
 				<a href="~/incAccounting?App=DepositList">Deposit List</a><br/>	
 				<a href="~/incAccounting?App=PayrollCheckList">Payroll Check List</a><br/>	
