Lists; New Type Defaults
Moved all list to report based object.  Imported Database SQL with all
reports.  Bug fixes and settig of types on new objects from list.

--- a/incAccounting/web/templates/PaymentType.html
+++ b/incAccounting/web/templates/PaymentType.html
@@ -3,12 +3,14 @@
 <div class="block">
 	<div class="field"><label>GUID:</label><div>{GUID}</div></div>
 	<div class="field"><label>Allowed:</label><div>{Is Allowed}</div></div>
+	<div class="field blank double"><label></label><div></div></div>
 	<div class="field blank"><label></label><div></div></div>
 	<div class="field"><label>Sales:</label><div>{Is Sales Related}</div></div>
 	<div class="field"><label>Name:</label><div>{Name}</div></div>
 	<div class="field"><label>Account:</label><div>{Accounts GUID}</div></div>
-	<div class="field"><label>Edit URL:</label><div>{Edit URL}</div></div>
-	<div class="field"><label>List URL:</label><div>{List URL}</div></div>
+	<div class="field blank double"><label></label><div></div></div>
+	<div class="field double"><label>Edit URL:</label><div class="double">{Edit URL}</div></div>
+	<div class="field double"><label>List URL:</label><div class="double">{List URL}</div></div>
 </div>
 
 <p>{Save}</p>
