--- a/incAccounting/web/templates/Securable.html
+++ b/incAccounting/web/templates/Securable.html
@@ -9,18 +9,18 @@
 <table>
 	<tr>
 		<td></td>
-		<td class="black center">Cr</td>
-		<td class="black center">Rd</td>
-		<td class="black center">Ud</td>
-		<td class="black center">Dl</td>
+		<td class="black center">C</td>
+		<td class="black center">R</td>
+		<td class="black center">U</td>
+		<td class="black center">D</td>
 	</tr>
 	<!-- BEGIN Securable -->
 	<tr>
-		<td class="right">{Securable Display}</td>
-		<td class="center">{Securable Can Create}</td>
-		<td class="center">{Securable Can Read}</td>
-		<td class="center">{Securable Can Update}</td>
-		<td class="center">{Securable Can Delete}</td>
+		<td class="right">{Securable Display}:&nbsp;</td>
+		<td class="center">{Securable Can Create}&nbsp;</td>
+		<td class="center">&nbsp;{Securable Can Read}&nbsp;</td>
+		<td class="center">&nbsp;{Securable Can Update}&nbsp;</td>
+		<td class="center">&nbsp;{Securable Can Delete}</td>
 	</tr>
 	<!-- END Securable -->
 </table>
