--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -19,54 +19,59 @@
 		<div id="menu" class="ported hidden">
 			<div class="padded columns">
 				<h1>Actions</h1>
-				<a href="~/incBootstrap?App=System">Splash Screen</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=18afbfdf422246b1a549f34dad94f8b7">Splash Screen</a><br/>
 				<a href="~/incBootstrap?App=Login">User Login</a><br/>	
 				<a href="~/incAccounting?App=Setup">Database Setup</a><br/>
 				<a href="~/incBootstrap?App=ChangePassword">Change Password</a><br/>	
 
 				<h1>Security</h1>
-				<a href="~/incBootstrap?App=ReportView&GUID=33abdf4f68f44d73b23fabe400280576">User List</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=290198ebc76e43cbb7be15de3e3d0ad7">Group List</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=bdcddb7c80a34302a83a23ac1ed5d309">Securable List</a><br/>	
-				<a href="~/incBootstrap?App=ComputerList">Computer List</a><br/>	
-				<a href="~/incBootstrap?App=SettingList">Setting List</a><br/>	
-				<a href="~/incBootstrap?App=LogList">Log List</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=33abdf4f68f44d73b23fabe400280576">Users</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=290198ebc76e43cbb7be15de3e3d0ad7">Groups</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=bdcddb7c80a34302a83a23ac1ed5d309">Securables</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=dd57e42a165047a38c5655dcc1b76576">Computers</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=c545d2f279be49e9a471a43033d01c7f">Settings</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=767a1911c68b4878a2ffc8dfd6974bc5">Logs</a><br/>	
 
 				<h1>Reporting</h1>
-				<a href="~/incBootstrap?App=ReportView&GUID=75ecee50436c4a7d8095b30f794f87f9">Report List</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership Report</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=6d4ea7d4624e48509e915e019ca1f7a9">Chart of Accounts with Balances</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=75ecee50436c4a7d8095b30f794f87f9">Reports</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=6d4ea7d4624e48509e915e019ca1f7a9">Trial Balance</a><br/>	
 
 				<h1>Lists</h1>
-				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Account List</a><br/>	
-				<a href="~/incAccounting?App=ContactTypeList">Contact Type List</a><br/>	
-				<a href="~/incAccounting?App=ContactList">Contacts List</a><br/>	
-				<a href="~/incAccounting?App=DepartmentList">Departments List</a><br/>	
-				<a href="~/incAccounting?App=ItemList">Items List</a><br/>	
-				<a href="~/incAccounting?App=JobList">Jobs List</a><br/>	
-				<a href="~/incAccounting?App=SalesTaxList">Sales Tax List</a><br/>	
-				<a href="~/incAccounting?App=UnitMeasureList">Unit Measure List</a><br/>
-				<a href="~/incAccounting?App=DocumentTypeList">Document Type List</a><br/>	
-				<a href="~/incAccounting?App=PaymentTypeList">Payment Type List</a><br/>	
-				<a href="~/incAccounting?App=EmployeeList">Employee List</a><br/>	
-				<a href="~/incAccounting?App=PayrollFieldList">Payroll Field List</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Accounts</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ed6c823f890a470fa23b637dae910117">Contact Types</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=57808ea5bb1948d8a1ddce32a3233e10">Contacts</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=1b739cb0b80649589760652098d0ff9c">Departments</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=c30ad5f313f44d15b9d5a75dcc7200ad">Items</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=d638b37131514266a0fa8df8dc0b39a6">Jobs</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=766ef959263043c79244f932e49ff61d">Sales Tax Authorities</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=6552470b48204c06b7a23271b472b6b7">Sales Tax Groups</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=88898672973041059e47961735e0c047">Unit Measures</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=92ecd1b71cf24a9b82538fcd9b1bf136">Document Types</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=fcb89d0333e4418f829803e34887edb7">Payment Types</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=a64f1e848b4b4b009f669e133d201478">Employees</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=a7d53239fa82450db2e9d07594e7cce9">Payroll Fields</a><br/>
 
-				<h1>Documents</h1>			
-				<a href="~/incAccounting?App=TransactionList">Transaction List</a><br/>	
-				<a href="~/incAccounting?App=DocumentList">Document List</a><br/>
-				<a href="~/incBootstrap?App=ReportView&GUID=078c5cd40a024563bfde3641352d4e43">Sales Quote List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=97c04a5ce5024ad4b2859908da8f6e1a">Sales Order List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=352f588dfcd147fda29b8b4cdc2fcdfc">Sales Invoice List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=3293e7a3b08744c38975accc635d7573">Sales Credit Memo List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=cefd88dd219a4b6f8bc6dd30fd77f058">Purchase Quote List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=7f8c6d9d299049779046ad7eb70884fa">Purchase Order List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=2fc5847e6eba4c5784ce3258bd5b8f53">Purchase Invoice List</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=30357e5cfb164c29a741e77f3de1cce7">Purchase Credit Memo List</a><br/> 
-				<a href="~/incAccounting?App=PaymentList">Payment List</a><br/>	
-				<a href="~/incAccounting?App=DepositList">Deposit List</a><br/>	
-				<a href="~/incAccounting?App=PayrollCheckList">Payroll Check List</a><br/>	
-				<a href="~/incAccounting?App=ReconciliationList">Reconciliation List</a><br/>
+				<h1>Accounting</h1>			
+				<a href="~/incBootstrap?App=ReportView&GUID=a92a85f5192e4dbb80cba3a67ad31448">Transactions</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=84c704545c9140fb96ee5b9610fe632b">Deposits</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Payroll Checks</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=7788774678b84145b3681511b0cc9d40">Reconciliations</a><br/>
 
+				<h1>Sales</h1>			
+				<a href="~/incBootstrap?App=ReportView&GUID=078c5cd40a024563bfde3641352d4e43">Sales Quotes</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=97c04a5ce5024ad4b2859908da8f6e1a">Sales Orders</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=352f588dfcd147fda29b8b4cdc2fcdfc">Sales Invoices</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=3293e7a3b08744c38975accc635d7573">Sales Credit Memos</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=b8f0ac2f50ba4d40b227c841846dee15">Sales Payments</a><br/>	
+
+				<h1>Purchasing</h1>			
+				<a href="~/incBootstrap?App=ReportView&GUID=cefd88dd219a4b6f8bc6dd30fd77f058">Purchase Quotes</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=7f8c6d9d299049779046ad7eb70884fa">Purchase Orders</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=2fc5847e6eba4c5784ce3258bd5b8f53">Purchase Invoices</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=30357e5cfb164c29a741e77f3de1cce7">Purchase Credit Memos</a><br/> 
+				<a href="~/incBootstrap?App=ReportView&GUID=b48f778f1bbf4b87b7e37c97324d9b48">Purchase Payments</a><br/>					
+				
 				<h1>Posting</h1>			
 				<a href="~/incAccounting?App=PostDocuments">Post Documents</a><br/>	
 				<a href="~/incAccounting?App=PostPayments">Post Payments</a><br/>									
