--- a/incAccounting/web/templates/Report.html
+++ b/incAccounting/web/templates/Report.html
@@ -2,6 +2,7 @@
 
 <div class="block">
 	<div class="field"><label>GUID:</label><div>{GUID}</div></div>
+	<div class="field"><label>Auto Load:</label><div>{Auto Load}</div></div>
 	<div class="field double"><label>Name:</label><div class="double">{Display Name}</div></div>
 	<div class="field double"><label>Title:</label><div class="double">{Title}</div></div>
 	<div class="field double"><label>HTML:</label><div class="double">
