--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -31,11 +31,18 @@
 				<a href="~/incBootstrap?App=ReportView&GUID=dd57e42a165047a38c5655dcc1b76576">Computers</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=c545d2f279be49e9a471a43033d01c7f">Settings</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=767a1911c68b4878a2ffc8dfd6974bc5">Logs</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=75ecee50436c4a7d8095b30f794f87f9">Reports</a><br/>	
 
 				<h1>Reporting</h1>
-				<a href="~/incBootstrap?App=ReportView&GUID=75ecee50436c4a7d8095b30f794f87f9">Reports</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=6d4ea7d4624e48509e915e019ca1f7a9">Trial Balance</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ee4f00312ff44e3d941c6a3445bf93b0">Account Ledger</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=f6c1313616f24bcd827863490e2a661b">Profit or Loss</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Net Worth</a><br/>	
+				<!--<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Aged Payables*</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Aged Receivables*</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Payroll History*</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Inventory Valuation*</a><br/>-->
 
 				<h1>Lists</h1>
 				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Accounts</a><br/>	
