--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -43,8 +43,8 @@
 				<a href="~/incBootstrap?App=ReportView&GUID=b88b0031fc2844eb874c5be27f8be003">Aged Receivables</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=01f2dff753214482b4a1ac02f6640914">Sales Tax Accural</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=f64ba5f5752a4473a5946fe68ddde21f">Sales Tax Cash</a><br/>	
-				<!--<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Payroll History*</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Inventory Valuation*</a><br/>-->
+				<a href="~/incBootstrap?App=ReportView&GUID=78b94c024b44435794158028b0daa54c">Payroll History</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Inventory Valuation</a><br/>
 
 				<h1>Lists</h1>
 				<a href="~/incBootstrap?App=ReportView&GUID=06db3e1b55e54bc2babf0424e0843d5b">Accounts</a><br/>	
@@ -66,6 +66,7 @@
 				<a href="~/incBootstrap?App=ReportView&GUID=84c704545c9140fb96ee5b9610fe632b">Deposits</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=6eeab128b44446b6b67556f7418298ba">Payroll Checks</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=7788774678b84145b3681511b0cc9d40">Reconciliations</a><br/>
+				<a href="~/incBootstrap?App=RegisterEntries">Account Register</a><br/>
 
 				<h1>Sales</h1>			
 				<a href="~/incBootstrap?App=ReportView&GUID=078c5cd40a024563bfde3641352d4e43">Sales Quotes</a><br/> 
