--- a/incAccounting/web/templates/Group.html
+++ b/incAccounting/web/templates/Group.html
@@ -11,7 +11,7 @@
 <table>
 	<!-- BEGIN User -->
 	<tr>
-		<td class="right">{User SQL User}&nbsp;</td>
+		<td class="right">{User Email Address}&nbsp;</td>
 		<td class="center">{User Included}</td>
 	</tr>
 	<!-- END User -->
