1 month data entry
Payment numbering, regenerated data, transaction typ URL changes,
account in lists to use nestd names, simplifed contact list, deposits to
auto number on save, document numbering flawed if number exists, payment
and prepayments, DB changes new version, deposit buttons are
conditional, postng bug fixed, posting selection inversion,
reconciliations to table layout, reconciliations to highlight rows green
when selected, register entry bug fix on edit, payroll history started.

--- a/incAccounting/web/templates/Account.html
+++ b/incAccounting/web/templates/Account.html
@@ -9,6 +9,7 @@
 	<div class="field"><label>Number:</label><div>{Number}</div></div>
 	<div class="field double"><label>Name:</label><div class="double">{Name}</div></div>
 	<div class="field double"><label>Full Name:</label><div class="double">{Nested Name}</div></div>
+	<div class="field"><label>Lst Ck #:</label><div>{Last Number}</div></div>
 </div>    
 <p>{Open Parent} {Save}</p>
 
@@ -21,6 +22,7 @@
 	<div class="field"><label>Segment:</label><div>{Child Segment}</div></div>
 	<div class="field"><label>Number:</label><div>{Child Number}</div></div>
 	<div class="field"><label></label><div>{Child Open}</div></div>
+	<div class="field"><label>Lst Ck #:</label><div>{Child Last Number}</div></div>
 </div>    
 <!-- END Child -->
 <p>{Add}</p>
