--- a/incAccounting/web/templates/Deposit.html
+++ b/incAccounting/web/templates/Deposit.html
@@ -7,6 +7,8 @@
 	<div class="field"><label>Number:</label><div>{Number}</div></div>
 </div>
 
+<p>{Save} {Print} {Post} {Open}</p>
+
 <h2>Includes</h2>
 <!-- BEGIN Payment -->
 <div class="block row">
@@ -22,4 +24,4 @@
 	<div class="field"><label>Total:</label><div>{Total}</div></div>
 </div>
 
-<p>{Save} {Post} {Print} {Open}</p>
+<p>{Save} {Print} {Post} {Open}</p>
