--- a/incAccounting/web/templates/Payment.html
+++ b/incAccounting/web/templates/Payment.html
@@ -23,6 +23,8 @@
 	<div class="field"><label>Country:</label><div>{Billing Address Country}</div></div>
 </div>
 
+<p>{Save} {Number} {Print} {Post} {Open Transaction}</p>
+
 <h2>Applications</h2>
 <!-- BEGIN Application -->
 <div class="block row">
@@ -39,7 +41,7 @@
 	<div class="field"><label>Total:</label><div>{Total}</div></div>
 </div>
 
-<p>{Save} {Open Transaction} {Post} {Print}</p>
+<p>{Save} {Number} {Print} {Post} {Open Transaction}</p>
 
 <script>
 	var nSettingDocumentMoneyDecimals = {Money Decimals};
