--- a/incAccounting/web/templates/PostDocuments.html
+++ b/incAccounting/web/templates/PostDocuments.html
@@ -5,7 +5,7 @@
 	<div class="field"><label>Status:</label><div>{Filter Status}</div></div>
 </div>
 
-<p>{Filter}</p>
+<p>{Filter} {Invert} {Process}</p>
 
 <!-- BEGIN Row -->
 <div class="block row">
@@ -18,4 +18,4 @@
 </div>
 <!-- END Row -->
 
-<p>{Process}</p>
+<p>{Invert} {Process}</p>
