--- a/incAccounting/web/templates/PostDeposits.html
+++ b/incAccounting/web/templates/PostDeposits.html
@@ -4,7 +4,7 @@
 	<div class="field"><label>Status:</label><div>{Filter Status}</div></div>
 </div>
 
-<p>{Filter}</p>
+<p>{Invert} {Filter}</p>
 
 <!-- BEGIN Row -->
 <div class="block row">
@@ -17,4 +17,4 @@
 </div>
 <!-- END Row -->
 
-<p>{Process}</p>
+<p>{Invert} {Process}</p>
