--- a/incAccounting/web/templates/Reconciliation.html
+++ b/incAccounting/web/templates/Reconciliation.html
@@ -10,18 +10,27 @@
 <!--<p><button>Import OFX</button></p>-->
 
 <h2>Transactions</h2>
-<!-- BEGIN Line -->
-<div class="block row">
-	<div class="field"><label>Cleared:</label><div>{Line Cleared}</div></div>
-	<div class="field"><label>Dated:</label><div>{Line Date}</div></div>
-	<div class="field"><label>Type:</label><div>{Line Name}</div></div>
-	<div class="field"><label>Number:</label><div>{Line Reference Number}</div></div>
-	<div class="field double"><label>Description:</label><div class="double">{Line Description}</div></div>
-	<div class="field blank"><label></label><div></div></div>
-	<div class="field"><label>Debit:</label><div>{Line Debit}</div></div>
-</div>
-<!-- END Line -->
-
+<table width="100%" class="list">
+	<tr>
+		<td>Clrd</td>
+		<td>Date</td>
+		<td>Type</td>
+		<td>Number</td>
+		<td>Description</td>
+		<td class="right">Debit</td>
+	</tr>
+	<!-- BEGIN Line -->
+	<tr>
+		<td class="center">{Line Cleared}</td>
+		<td>{Line Date}</td>
+		<td>{Line Name}</td>
+		<td>{Line Reference Number}</td>
+		<td>{Line Description}</td>
+		<td class="right">{Line Debit}</td>
+	</tr>
+	<!-- END Line -->
+</table>
+<br/>
 <h2>Summary</h2>
 <div class="block">
 	<div class="field"><label>Begin:</label><div>{Beginning Balance}</div></div>
@@ -39,3 +48,7 @@
 </div>
 
 <p>{Save}</p>
+
+<script>
+	pageLoaded();
+</script>	
