Payroll Check Posting, Out of Balance Report, and Transaction Debit = $0.00 as Deleted
Reports for out og balance.  Payroll check load posted to omit
templates.  Transaction row with debit = 0.00 to not flagas deleted.
Added Out of Balance report to menu.

--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -36,6 +36,7 @@
 				<h1>Reporting</h1>
 				<a href="~/incBootstrap?App=ReportView&GUID=cef027b31c704b17b9f97bc9489626cb">Group Membership</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=6d4ea7d4624e48509e915e019ca1f7a9">Trial Balance</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=a817ee365045448fb67c75db9b586ec8">Out of Balance</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=ee4f00312ff44e3d941c6a3445bf93b0">Account Ledger</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=f6c1313616f24bcd827863490e2a661b">Profit or Loss</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=ea6fdeb8d76247aa876dcab709b5de6e">Net Worth</a><br/>	
