--- a/incAccounting/web/templates/Transaction.html
+++ b/incAccounting/web/templates/Transaction.html
@@ -7,10 +7,11 @@
 	<div class="field"><label>Reference:</label><div>{Reference Number}</div></div>
 </div>
 
+<p>{Add} {Save} {Open Document} {Delete}</p>
+
 <h2>Lines</h2>
 <!-- BEGIN Line -->
 <div class="block row">
-	<div class="field"><label>Delete:</label><div>{Line Is Deleted}</div></div>
 	<div class="field"><label>Job:</label><div>{Line Jobs GUID}</div></div>
 	<div class="field"><label>Depart:</label><div>{Line Departments GUID}</div></div>
 	<div class="field double"><label>Descript:</label><div class="double">{Line Description}</div></div>
@@ -24,4 +25,4 @@
 	<div class="field"><label>Balance:</label><div>{Balance}</div></div>
 </div>
 
-<p>{Add} {Save} {Open Document}</p>
+<p>{Add} {Save} {Open Document} {Delete}</p>
