MySQL table names inconsistent -- forcing to lower case and insensitive.  Mysql setting will need changed.
Regenrated to remove "loadAll" from row.

Updated securables to reflect new GUID since name changed.

Updated generator to treat names as lowercase.

Group can edit permissions.

Report security check.

Password reset and handling.

Exception.getMessage() == null handling.

Do not cheeck can read on Row type - it's not secured.

--- a/incAccounting/web/templates/Group.html
+++ b/incAccounting/web/templates/Group.html
@@ -7,6 +7,8 @@
 	<div class="field"><label>Email:</label><div>{Email Address}</div></div>
 </div>
 
+<p>{Save}</p>
+
 <h2>Members</h2>
 <table>
 	<!-- BEGIN User -->
@@ -15,6 +17,28 @@
 		<td class="center">{User Included}</td>
 	</tr>
 	<!-- END User -->
+</table>
+
+<p>{Save}</p>
+
+<h2>Permissions</h2>
+<table>
+	<tr>
+		<td class="center">C</td>
+		<td class="center">R</td>
+		<td class="center">U</td>
+		<td class="center">D</td>
+		<td>&nbsp;</td>
+	</tr>
+	<!-- BEGIN Securable -->
+	<tr>
+		<td class="center">{Securable Can Create}</td>
+		<td class="center">{Securable Can Read}</td>
+		<td class="center">{Securable Can Update}</td>
+		<td class="center">{Securable Can Delete}</td>
+		<td>&nbsp;{Securable Display Name}</td>
+	</tr>
+	<!-- END Securable -->
 </table>
 
 <p>{Save}</p>
