Clean .toFixed and change accounting transaction from postback to javascript

--- a/incAccounting/web/templates/Transaction.html
+++ b/incAccounting/web/templates/Transaction.html
@@ -26,3 +26,9 @@
 </div>
 
 <p>{Add} {Save} {Open Document} {Delete}</p>
+<script>
+    var nSettingDocumentMoneyDecimals = {Money Decimals};
+    
+    pageLoaded();
+    debitChanged();
+</script>
