Inv items beeing passed as json array.  In item changed, use JS to update controls and prevent a postback.

--- a/incAccounting/web/templates/Document.html
+++ b/incAccounting/web/templates/Document.html
@@ -79,6 +79,8 @@
 	var nSettingDocumentRateDecimals = {Rate Decimals};
 	var nSettingDocuemntDueDays = {Due Days};
 	
+	var arrInventoryItems = {Items};
+	
 	pageLoaded();
 	invoiceChanged();
 </script>	
