Time trracking added

--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -58,13 +58,10 @@
 				<a href="~/incBootstrap?App=ReportView&GUID=88898672973041059e47961735e0c047">Unit Measures</a><br/>
 				<a href="~/incBootstrap?App=ReportView&GUID=92ecd1b71cf24a9b82538fcd9b1bf136">Document Types</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=fcb89d0333e4418f829803e34887edb7">Payment Types</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=a64f1e848b4b4b009f669e133d201478">Employees</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=a7d53239fa82450db2e9d07594e7cce9">Payroll Fields</a><br/>
 
 				<h1>Accounting</h1>			
 				<a href="~/incBootstrap?App=ReportView&GUID=a92a85f5192e4dbb80cba3a67ad31448">Transactions</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=84c704545c9140fb96ee5b9610fe632b">Deposits</a><br/>	
-				<a href="~/incBootstrap?App=ReportView&GUID=6eeab128b44446b6b67556f7418298ba">Payroll Checks</a><br/>	
 				<a href="~/incBootstrap?App=ReportView&GUID=7788774678b84145b3681511b0cc9d40">Reconciliations</a><br/>
 				<a href="~/incBootstrap?App=RegisterEntries">Account Register</a><br/>
 
@@ -80,8 +77,16 @@
 				<a href="~/incBootstrap?App=ReportView&GUID=7f8c6d9d299049779046ad7eb70884fa">Purchase Orders</a><br/> 
 				<a href="~/incBootstrap?App=ReportView&GUID=2fc5847e6eba4c5784ce3258bd5b8f53">Purchase Invoices</a><br/> 
 				<a href="~/incBootstrap?App=ReportView&GUID=30357e5cfb164c29a741e77f3de1cce7">Purchase Credit Memos</a><br/> 
-				<a href="~/incBootstrap?App=ReportView&GUID=b48f778f1bbf4b87b7e37c97324d9b48">Purchase Payments</a><br/>					
+				<a href="~/incBootstrap?App=ReportView&GUID=b48f778f1bbf4b87b7e37c97324d9b48">Purchase Payments</a><br/>
 				
+				<h1>Employees</h1>
+				<a href="~/incBootstrap?App=ReportView&GUID=a64f1e848b4b4b009f669e133d201478">Employees</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=a7d53239fa82450db2e9d07594e7cce9">Payroll Fields</a><br/>
+				<a href="~/incBootstrap?App=ReportView&GUID=a51f368f999a4ebdb900a1e1cfac9ebb">Time Entry Types</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=8fdb0c8bbfb84ead88aed2ee3674b498">Time Entry</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=8e32580ad6aa45d592e4182876a0a23a">Time Sheets</a><br/>	
+				<a href="~/incBootstrap?App=ReportView&GUID=6eeab128b44446b6b67556f7418298ba">Payroll Checks</a><br/>	
+			
 				<h1>Posting</h1>			
 				<a href="~/incAccounting?App=PostDocuments">Post Documents</a><br/>	
 				<a href="~/incAccounting?App=PostPayments">Post Payments</a><br/>									
