Time sheets to include "unpaid" since it is defined per pay range. Added auto to timesheet to autoatically select the times flagged as payable. Time entry list reprt fixed. Added numberToText using ICU libraries.  Incorporated on Paychecks and Payments.

--- a/incAccounting/web/templates/PayrollCheckPrint.html
+++ b/incAccounting/web/templates/PayrollCheckPrint.html
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div id="second">
-			<div id="pay-amount"><b>Pay:</b> Four hundred, thirty two dollars and eights two hundredths</div>
+			<div id="pay-amount"><b>Pay:</b> {Amount as Text} ----------</div>
 			<div id="pay-to"><b>To:</b> {Pay To The Order Of}</div>
 			<div id="billing-address">
 				<div>{Line 1}</div>
