--- a/incAccounting/web/templates/TimeSheet.html
+++ b/incAccounting/web/templates/TimeSheet.html
@@ -8,6 +8,8 @@
 	<div class="field"><label>Ending:</label><div>{Period Ending}</div></div>
 </div>
 
+<p>{Save} {Auto}</p>
+
 <table width="100%">
 	<tr>
 		<td class="black">Inc</td>
@@ -38,7 +40,7 @@
 	<div class="field"><label>Total:</label><div>{Total Hours}</div></div>
 </div>
 
-<p>{Save}</p>
+<p>{Save} {Auto}</p>
 
 <script>
 	var arrTimeEntries = {TimeEntries};	
