--- a/incAccounting/web/templates/PaymentPrint-PurchasePayment.html
+++ b/incAccounting/web/templates/PaymentPrint-PurchasePayment.html
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div id="second">
-			<div id="pay-amount"><b>Pay:</b> Four hundred, thirty two dollars and eights two hundredths</div>
+			<div id="pay-amount"><b>Pay:</b> {Amount as Text} ----------</div>
 			<div id="pay-to"><b>To:</b> {Contacts Display Name}</div>
 			<div id="billing-address">
 				<div>{Billing Address Line 1}</div>
