--- a/incAccounting/web/templates/Transaction.html
+++ b/incAccounting/web/templates/Transaction.html
@@ -12,6 +12,8 @@
 <h2>Lines</h2>
 <!-- BEGIN Line -->
 <div class="block row">
+	<div class="field"><label>Delete:</label><div>{Line Is Deleted}</div></div>
+	<div class="field blank"><label></label><div></div></div>
 	<div class="field"><label>Job:</label><div>{Line Jobs GUID}</div></div>
 	<div class="field"><label>Depart:</label><div>{Line Departments GUID}</div></div>
 	<div class="field double"><label>Descript:</label><div class="double">{Line Description}</div></div>
