Reports to generate their delete and reinserts into database.  Report canged to have non-select query to start - this is for ceating a tempoary table.  The rest of the report can select from the temporary table.  AR report updated to eliminate quotes and purchase documents but include purchase payments (refunds).

--- a/incAccounting/web/templates/Report.html
+++ b/incAccounting/web/templates/Report.html
@@ -5,13 +5,17 @@
 	<div class="field"><label>Auto Load:</label><div>{Auto Load}</div></div>
 	<div class="field double"><label>Name:</label><div class="double">{Display Name}</div></div>
 	<div class="field double"><label>Title:</label><div class="double">{Title}</div></div>
+	<div class="field double"><label>Non-Select:</label><div class="double">
+			{Query}
+			<pre id="QueryEditor"></pre>
+	</div></div>
 	<div class="field double"><label>HTML:</label><div class="double">
 			{HTML Template}
 			<pre id="HtmlEditor"></pre>
 	</div></div>
+	<div class="field double"><label>Export SQL:</label><div class="double">{SQL}</div></div>
 </div>
-<p>{View} {Save} {Copy}</p>
-
+<p>{View} {Save} {Copy} {Export SQL}</p>
 
 <h2>Filters</h2>
 <!-- BEGIN Filter -->
