--- a/incAccounting/web/css/Report.css
+++ b/incAccounting/web/css/Report.css
@@ -1,3 +1,3 @@
-#HtmlTemplate, .FilterQuery { visibility: hidden; display: none; }
+#HtmlTemplate, .Query, .FilterQuery { visibility: hidden; display: none; }
 
 .FilterEditor { height: 4em; }
