Future report changes. Time sheet simplification/combining errors. Reonceiliation focus changes. Code should reference controls by ID and not name. ID should be Name? Document JS changes to handle taxability. Payroll check - add buttons between sections. Text numbers changed for check printing.

--- a/incAccounting/web/templates/PayrollCheck.html
+++ b/incAccounting/web/templates/PayrollCheck.html
@@ -23,6 +23,8 @@
 	<div class="field"><label>Country:</label><div>{Country}</div></div>
 </div>
 
+<p>{Save} {Post} {Open Transaction} {Print}</p>
+
 <h2>Gross Compensation</h2>
 <!-- BEGIN Gross -->
 <div class="block row">
@@ -38,7 +40,7 @@
 	<div class="field"><label>Gross:</label><div><input id="Gross" class="readonly" type=text readonly value="0.00" /></div></div>
 	<div class="field"><label>Adjusted:</label><div><input id="Adjusted" class="readonly" type=text readonly value="0.00" /></div></div>
 </div>	
-<p>{Add Gross}</p>
+<p>{Add Gross} {Save} {Post} {Open Transaction} {Print}</p>
 
 <h2>Employee Withheld</h2>
 <!-- BEGIN Employee -->
@@ -55,7 +57,7 @@
 	<div class="field blank"><label></label><div></div></div>
 	<div class="field"><label>Withheld:</label><div><input id="Withheld" class="readonly" type=text readonly value="0.00" /></div></div>
 </div>	
-<p>{Add Employee}</p>
+<p>{Add Employee} {Save} {Post} {Open Transaction} {Print}</p>
 
 
 <h2>Company Paid</h2>
@@ -73,7 +75,7 @@
 	<div class="field blank"><label></label><div></div></div>
 	<div class="field"><label>Expense:</label><div><input id="Company" class="readonly" type=text readonly value="0.00" /></div></div>
 </div>	
-<p>{Add Company}</p>
+<p>{Add Company} {Save} {Post} {Open Transaction} {Print}</p>
 
 <h2>Take Home</h2>
 <div class="math">
