--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -149,7 +149,7 @@
 			}
 			
 			function setFocusAfter() {
-				elm = document.getElementById(sFocusAfterSender);
+				var elm = document.getElementById(sFocusAfterSender);
 				elm.scrollIntoView();
 				elm.focus();
 			}
