--- a/incAccounting/web/templates/Template.html
+++ b/incAccounting/web/templates/Template.html
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 		<div id="body" class="ported">
-			<form id="form" method="post" action="{Form Action}" onsubmit="beforeSubmit(); return true;">
+			<form id="form" method="post" action="{Form Action}" onsubmit="beforeSubmit(); return true;" enctype="multipart/form-data">
 				<div id="hiddenmodel">{Hidden Model}</div>
 				<div id="error">{Error}</div>
 				{Body}
